# CudaRT

./: CMakeLists.txt  main.cu
ext/jtxlib/src/jtxlib/math/: numerical.hpp
src/: camera.hpp  hittable.hpp  hittablelist.hpp  interval.hpp  main.cu  material.hpp  rt.hpp  sphere.hpp
src/jtxlib/math/: math.hpp  spherical.cpp  spherical.hpp
